--- a/TODO
+++ b/TODO
@@ -22,9 +22,9 @@
 . pause           -> Suspends processing of a command and displays the message
 . run             -> Starts a specified program or command, given the full or sysenv path
 . cat             -> Starts an installed program from the system
-x allinstapps     -> Lists all installed apps on your machine       [NOTE: it is now a part of cat. If no command is passed in cat then this command will automatically be called.]
-prompt          -> Changes the command prompt
-backup          -> Creates a restore point of AOs
+x allinstapps     -> Lists all installed apps on your machine             [NOTE: it is now a part of cat. If no command is passed in cat then this command will automatically be called.]
+. prompt          -> Change the command prompt
+x backup          -> Creates a restore point of AOs                       [NOTE: Discontinued feature]
 ls              -> Displays a list of files and subdirectories in a directory
 cd              -> Changes the current directory
 touch           -> Creates a file or folder
