--- a/TODO
+++ b/TODO
@@ -1,109 +1,55 @@
 '.' means DONE
 'x' means NOT TO BE DONE (REMOVED FEATURE)
 
-. clear           -> Clears the screen
-. version         -> Displays the AOs version
+. clear           -> Clear the screen
+. version         -> Display the AOs version
 . about           -> About AOs
 . shutdown        -> Shutdown the system
 . restart         -> Restart the system
 . exit            -> Exit AOs
 . reload          -> Restart AOs
-. credits         -> Credits for AOs
+. credits         -> Credit for AOs
 . time            -> Show time
 . date            -> Show date
 . datetime        -> Show both date and time
-. shout           -> Displays messages
-. history         -> Displays the history of Commands
-. console         -> Starts a new instance of the terminal
-. title           -> Changes the title for AOs window
-. color           -> Changes the default AOs foreground and background colors
-. time            -> Displays current time and date
-. wait            -> Suspends processing of a command for the given number of seconds
-. pause           -> Suspends processing of a command and displays the message
-. run             -> Starts a specified program or command, given the full or sysenv path
-. cat             -> Starts an installed program from the system
-x allinstapps     -> Lists all installed apps on your machine               [NOTE: it is now a part of cat. If no command is passed in cat then this command will automatically be called.]
+. shout           -> Display messages
+. history         -> Display the history of Commands
+. console         -> Start a new instance of the terminal
+. title           -> Change the title for AOs window
+. color           -> Change the default AOs foreground and background colors
+. time            -> Display current time and date
+. wait            -> Suspend processing of a command for the given number of seconds
+. pause           -> Suspend processing of a command and displays the message
+. run             -> Start a specified program or command, given the full or sysenv path
+. cat             -> Start an installed program from the system
+x allinstapps     -> List all installed apps on your machine               [NOTE: it is now a part of cat. If no command is passed in cat then this command will automatically be called.]
 . prompt          -> Change the command prompt
-x backup          -> Creates a restore point of AOs                         [NOTE: Discontinued feature]
+x backup          -> Create a restore point of AOs                         [NOTE: Discontinued feature]
 . ls              -> Display a list of files and subdirectories in a directory
-. cd              -> Changes the current directory                          [NOTE: cd.. is an independent/separate command which change the current directory to previous directory]
-. touch           -> Creates a file or folder
-. del             -> Deletes one or more files or folders
-. ren             -> Renames a file or files
+. cd              -> Change the current directory                          [NOTE: cd.. is an independent/separate command which change the current directory to previous directory]
+. touch           -> Create a file or folder
+. del             -> Delete one or more files or folders
+. ren             -> Rename a file or files
 . copy            -> Advanced utility to copy files and directory trees
-. move            -> Moves one or more files from one directory to another directory
-pixelate        -> Starts a website in a web browser
-read            -> Displays the contents of a text file
-commit          -> Edits the contents of a text file
-zip             -> Compresses or Decompresses files or folders. (-u flag to unzip)
+. move            -> Move one or more files from one directory to another directory
+pixelate        -> Start a website in a web browser
+read            -> Display the contents of a text file
+commit          -> Edit the contents of a text file
+zip             -> Compresse or Decompresses files or folders. (-u flag to unzip)
+generate        -> Generate a random number between 0 and 1                [NOTE: Use my AND algo for this]
+scan            -> Scan the integrity of all protected system files
+lock            -> Lock the System at Start-up
 update          -> Check for Updates
-scan            -> Scans the integrity of all protected system files
-lock            -> Locks the System at Start-up
-terminate       -> Terminates current running process
-generate        -> Generates a random number between 0 and 1
-ran             -> Displays operating system configuration information
-tree            -> Graphically displays the directory structure of a drive or path
-diagxt          -> Displays machine specific properties and configuration
-restore         -> Restores system files and folders
+terminate       -> Terminate current running process
+ran             -> Display operating system configuration information
+tree            -> Graphically display the directory structure of a drive or path
+diagxt          -> Display machine specific properties and configuration
+restore         -> Restore system files and folders
 reset           -> Reset AOs
-assoc           -> Displays or modifies file extension associations
-attrib          -> Displays or changes file attributes
-break           -> Sets or clears extended ctrl+c checking
-bcdedit         -> Sets properties in boot database to control boot loading
-cacls           -> Displays or modifies access control lists (acls) of files
-call            -> Calls one batch program from another
-chcp            -> Displays or sets the active code page number
-chdir           -> Displays the name of or changes the current directory
-chkdsk          -> Checks a disk and displays a status report
-chkntfs         -> Displays or modifies the checking of disk at boot time
-comp            -> Compares the contents of two files or sets of files
-compact         -> Displays or alters the compression of files on ntfs partitions
-convert         -> Converts fat volumes to ntfs.  you cannot convert the current drive
-diskpart        -> Displays or configures disk partition properties
-doskey          -> Edits command lines, recalls windows commands, and creates macros
-driverquery     -> Displays current device driver status and properties
-echo            -> Displays messages, or turns command echoing on or off
-endlocal        -> Ends localization of environment changes in a batch file
-erase           -> Deletes one or more files
-fc              -> Compares two files or sets of files, and displays the differences between them
-find            -> Searches for a text string in a file or files
-findstr         -> Searches for strings in files
-for             -> Runs a specified command for each file in a set of files
-format          -> Formats a disk for use with windows
-fsutil          -> Displays or configures the file system properties
-ftype           -> Displays or modifies file types used in file extension associations
-goto            -> Directs the windows command interpreter to a labeled line in a batch program
-gpresult        -> Displays group policy information for machine or user
-graftabl        -> Enables windows to display an extended character set in graphics mode
-help            -> Provides help information for AOs commands
-icacls          -> Display, modify, backup, or restore acls for files and directories
-if              -> Performs conditional processing in batch programs
-label           -> Creates, changes, or deletes the volume label of a disk
-mklink          -> Creates symbolic links and hard links
-mode            -> Configures a system device
-more            -> Displays output one screen at a time
-openfiles       -> Displays files opened by remote users for a file share
-path            -> Displays or sets a search path for executable files
-popd            -> Restores the previous value of the current directory saved by pushd
-print           -> Prints a text file
-pushd           -> Saves the current directory then changes it
-recover         -> Recovers readable information from a bad or defective disk
-rem             -> Records comments (remarks) in batch files or config.sys
-replace         -> Replaces files
-robocopy        -> Advanced utility to copy files and directory trees
-set             -> Displays, sets, or removes windows environment variables
-setlocal        -> Begins localization of environment changes in a batch file
-sc              -> Displays or configures services (background processes)
-schtasks        -> Schedules commands and programs to run on a computer
-shift           -> Shifts the position of replaceable parameters in batch files
-sort            -> Sorts input
-subst           -> Associates a path with a drive letter
-verify          -> Tells windows whether to verify that your files are written correctly to a disk
-vol             -> Displays a disk volume label and serial number
-wmic            -> Displays wmi information inside interactive command shell
-srh             -> Searchs for a specific query on the internet
-wiki            -> Searchs for information on wikipedia
-ply             -> Searchs for a video on youtube based on a query
-weather         -> Displays today's weather in a city
-temperature     -> Displays today's temperature in a city
-settings        -> Starts the Windows settings page
+srh             -> Search for a specific query on the internet
+wiki            -> Search for information on wikipedia
+ply             -> Search for a video on youtube based on a query
+weather         -> Display today's weather in a city
+temperature     -> Display today's temperature in a city
+settings        -> Start the Windows settings page
+filer           -> Encrypt any text
