--- a/TODO
+++ b/TODO
@@ -32,9 +32,9 @@ x backup          -> Create a restore point of AOs                         [NOTE
 . ren             -> Rename a file or files
 . copy            -> Advanced utility to copy files and directory trees
 . move            -> Move one or more files from one directory to another directory
-pixelate        -> Start a website in a web browser
-read            -> Display the contents of a text file
-commit          -> Edit the contents of a text file
+. pixelate        -> Start a website in a web browser
+. read            -> Display the contents of a text file
+. commit          -> Edit the contents of a text file
 zip             -> Compresse or Decompresses files or folders. (-u flag to unzip)
 generate        -> Generate a random number between 0 and 1                [NOTE: Use my AND algo for this]
 scan            -> Scan the integrity of all protected system files
