add ran, sysinfo, tree and diagxt commands. Also dropped the idea of setup and removed AskPass system

--- a/TODO
+++ b/TODO
@@ -12,6 +12,10 @@
 . time            -> Show time
 . date            -> Show date
 . datetime        -> Show both date and time
+. generate        -> Generate a random number between 0 and 1                [NOTE: Use my AND algo for this]
+. ran             -> Display operating system configuration information
+. tree            -> Graphically display the directory structure of a drive or path
+. diagxt          -> Display AOs specific properties and configuration
 . shout           -> Display messages
 . history         -> Display the history of Commands
 . console         -> Start a new instance of the terminal
@@ -36,20 +40,16 @@ x backup          -> Create a restore point of AOs                         [NOTE
 . read            -> Display the contents of a text file
 . commit          -> Edit the contents of a text file
 . zip             -> Compresse or Decompresses files or folders (-u flag to unzip)
-generate        -> Generate a random number between 0 and 1                [NOTE: Use my AND algo for this]
 scan            -> Scan the integrity of all protected system files
-lock            -> Lock the System at Start-up
+lock            -> Lock the System at Start-up                              [NOTE: Discontinued feature]
 update          -> Check for Updates
 terminate       -> Terminate current running process
-ran             -> Display operating system configuration information
-tree            -> Graphically display the directory structure of a drive or path
-diagxt          -> Display machine specific properties and configuration
-restore         -> Restore system files and folders
-reset           -> Reset AOs
+restore         -> Restore system files and folders                         [NOTE: Discontinued feature]
+reset           -> Reset AOs                                                [NOTE: Discontinued feature]
 srh             -> Search for a specific query on the internet
-wiki            -> Search for information on wikipedia
+wiki            -> Search for information on wikipedia                      [NOTE: Discontinued feature]
 ply             -> Search for a video on youtube based on a query
 weather         -> Display today's weather in a city
 temperature     -> Display today's temperature in a city
-settings        -> Start the Windows settings page
+settings        -> Start the Windows settings page                          [NOTE: Included in 'cat']
 filer           -> Encrypt any text
