--- a/TODO
+++ b/TODO
@@ -20,7 +20,7 @@
 . ran             -> Display operating system configuration information
 . tree            -> Graphically display the directory structure of a drive or path
 . diagxt          -> Display AOs specific properties and configuration
-scan            -> Scan the integrity of all protected system files
+.scan            -> Scan the integrity of all protected system files
 update          -> Check for Updates
 . shout           -> Display messages
 . history         -> Display the history of Commands
@@ -47,7 +47,6 @@ x backup          -> Create a restore point of AOs                         [NOTE
 . commit          -> Edit the contents of a text file
 . zip             -> Compresse or Decompresses files or folders (-u flag to unzip)
 lock            -> Lock the System at Start-up                              [NOTE: Discontinued feature]
-terminate       -> Terminate current running process
 restore         -> Restore system files and folders                         [NOTE: Discontinued feature]
 reset           -> Reset AOs                                                [NOTE: Discontinued feature]
 srh             -> Search for a specific query on the internet              [NOTE: Implementd in pixelate]
@@ -56,7 +55,7 @@ ply             -> Search for a video on youtube based on a query           [NOT
 weather         -> Display today's weather in a city                        [NOTE: Implementd in pixelate]
 temperature     -> Display today's temperature in a city                    [NOTE: Implementd in pixelate]
 settings        -> Start the Windows settings page                          [NOTE: Included in 'cat']
-
+terminate       -> Terminate current running process
 filer           -> Encrypt any text
 dev, developer	-> Developer tools:
 	[
