--- a/TODO
+++ b/TODO
@@ -1,11 +1,19 @@
+'#' means Comment (to be ignored)
 '.' means DONE
 'x' means NOT TO BE DONE (REMOVED FEATURE)
+'~' means Feature for AOs 2.6
+'\\\' means Continue the current line in a newline
 
 ........................................................................................................................
 ........................................................Non-Commands....................................................
 ........................................................................................................................
 Further clean the code, specially Obsidian and EntryPoint.
-If any .aos or any other .exe, .msi, .bat, .cmd, etc file executable exists in the 'PowerToys' folder make it a global command for AOs.
+. If any .aos or any other .exe, .msi, .bat, .cmd, etc file executable exists in the 'PowerToys' folder make it a global command for AOs.
+If the input is some thing like 'powertoys::<file-name>', directly call the file just from the 'PowerToys' folder without checking for similar executable files in the current folder.
+
+/* Not sure to do or not */
+Make AOs launch with windows terminal using 'wt.exe AOs.exe'
+# Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'Files.x72\\root' folder then only open the setup page, also don't ask for password].
 
 ........................................................................................................................
 ...........................................................Commands.....................................................
@@ -15,7 +23,11 @@ let 			-> Store data to a variable:
 	To use the variable type '$[the-name-of-the-variable]'.
 	'let' command can store any value to variables. Even store values from other commands like the 'datetime' command.
 
-Direct/Indirect implementation of pastel in AOs.
+~ Direct/Indirect implementation of pastel in AOs. \\\
+'include', 'import' command will import a '.pastel' and load all it's functions into AOs as make them work like in-built commands. \\\
+Meaning if you have a pastel file having a function 'test' and comment on top of the defination of the function then you import that file using the 'include' command then the function test will work like any other AOs command. \\\
+Meaning when you will type 'help test' you will get all the details including a help message from the comment on top of the defination of the very same function in the '.pastel' file. \\\
+In the 'help' command the function will be listed, but only for that instance of AOs because include is not a permanent include.
 
 /* Experimental commands */
 @               -> Experimental commands
@@ -165,34 +177,40 @@ dev, developer	-> Developer tools:
 		NOTE: you don't need to type `dev pastel test.pastel` to run the program,
 		just do `dev test.pastel` or `dev my_progam.py` or `dev k.c++` and
 		developer command will automatically identify the programming language.
+		Create a 'aos.dev' file in 'aos.dev' folder in the root directory.
+		'aos.dev' file will contain all the build and running related commands,
+		it will provide a proper and customizable environment for the build system.
 	]
-	[when no argument is passed]:
-		AOs				-> Run a AOs file
-		pastel			-> Run a Pastel project
-		dotnet			-> Build or run a .NET project
-		python			-> Run a Python project
-		g++				-> Build a C++ project
-		gcc				-> Build a C project
-		java			-> Run a Java project
-		kotlin			-> Run a Kotlin project
-		go				-> Build a Go project
-		cargo			-> Run a Rust project
-		swift			-> Run a Swift project
-		node			-> Run a JavaScript project
-		batch			-> Run a batch project
+#	[when no argument is passed]:
+#		AOs				-> Run a AOs file
+#		pastel			-> Run a Pastel project
+#		dotnet			-> Build or run a .NET project
+#		python			-> Run a Python project
+#		g++				-> Build a C++ project
+#		gcc				-> Build a C project
+#		java			-> Run a Java project
+#		kotlin			-> Run a Kotlin project
+#		go				-> Build a Go project
+#		cargo			-> Run a Rust project
+#		swift			-> Run a Swift project
+#		node			-> Run a JavaScript project
+#		batch			-> Run a batch project
 
-	[
-		NOTE: you don't need to type `dev -c pastel test.pastel` to compile the program,
-		just do `dev -c test.pastel` or `dev -c my_progam.py` or `dev -c k.c++` and
-		developer command will automatically identify the programming language.
-	]
-	-b, -c, --build, --compile:
-		pastel			-> Run a Pastel project
-		dotnet			-> Build a .NET project
-		g++				-> Build a C++ project
-		gcc				-> Build a C project
-		java			-> Build a Java project
-		kotlin			-> Build a Kotlin project
-		go				-> Build a Go project
-		rust			-> Build a Rust project
-		swift			-> Build a Swift project
+#	[
+#		NOTE: you don't need to type `dev -c pastel test.pastel` to compile the program,
+#		just do `dev -c test.pastel` or `dev -c my_progam.py` or `dev -c k.c++` and
+#		developer command will automatically identify the programming language.
+#	]
+#	-b, -c, --build, --compile:
+#		pastel			-> Run a Pastel project
+#		dotnet			-> Build a .NET project
+#		g++				-> Build a C++ project
+#		gcc				-> Build a C project
+#		java			-> Build a Java project
+#		kotlin			-> Build a Kotlin project
+#		go				-> Build a Go project
+#		rust			-> Build a Rust project
+#		swift			-> Build a Swift project
+
+#	-e, --execute:
+#		execute without build.
