Add terminate command in AOs with all AOs 2.4 functionality returning to the new AOs 2.5

--- a/TODO
+++ b/TODO
@@ -138,7 +138,7 @@ x ply             -> Search for a video on youtube based on a query           [N
 x weather         -> Display today's weather in a city                        [NOTE: Implemented in pixelate]
 x temperature     -> Display today's temperature in a city                    [NOTE: Implemented in pixelate]
 x settings        -> Start the Windows settings page                          [NOTE: Included in 'cat' command]
-terminate       -> Terminate current running process
+.terminate       -> Terminate current running process
 filer           -> Encrypt any text
 
 /* Developer features */
