--- a/TODO
+++ b/TODO
@@ -143,6 +143,7 @@ x temperature     -> Display today's temperature in a city                    [N
 x settings        -> Start the Windows settings page                          [NOTE: Included in 'cat' command]
 .terminate       -> Terminate current running process
 . filer           -> Encrypt any text
+. vol             -> Set the system master volume to a specific level
 
 /* Developer features */
 dev, developer	-> Developer tools:
