--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@
 Make AOs launch with windows terminal using 'wt.exe AOs.exe'
 Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'Files.x72\\root' folder then only open the setup page, also don't ask for password].
 
-/* BUG */
+/* BUGS */
 .leaf https://google.com is not working for some reason.
 .sometimes the ">" input doesn't work. CMD opens and closes immediately and automatically.
 
@@ -22,6 +22,7 @@ Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'F
 ...........................................................Commands.....................................................
 ........................................................................................................................
 /* AOs 2.6 features */
+Improve help messages, giving more detail about the command - such as how to use - when the input is like `help <command-name>`
 Further improve the ';' (run multiple commands in a single line) feature. Make it work like a programming language.
 let -> Store data to a variable:
 	To use the variable type '$[the-name-of-the-variable]'.
