--- a/TODO
+++ b/TODO
@@ -8,15 +8,15 @@
 ........................................................................................................................
 . Further clean the code, specially Obsidian and EntryPoint.
 . If any .aos or any other .exe, .msi, .bat, .cmd, etc file executable exists in the 'PowerToys' folder make it a global command for AOs.
-. Fix the bug in Filer where it sometimes tries decrypt "099" for some reason. Debug it and fix it.
 
 /* Not sure to do or not */
 Make AOs launch with windows terminal using 'wt.exe AOs.exe'
 Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'Files.x72\\root' folder then only open the setup page, also don't ask for password].
 
 /* BUGS */
-.leaf https://google.com is not working for some reason.
-.sometimes the ">" input doesn't work. CMD opens and closes immediately and automatically.
+. Fix the bug in Filer where it sometimes tries decrypt "099" for some reason. Debug it and fix it.
+. Leaf https://google.com is not working for some reason.
+. Sometimes the ">" input doesn't work. CMD opens and closes immediately and automatically.
 
 ........................................................................................................................
 ...........................................................Commands.....................................................
