--- a/TODO
+++ b/TODO
@@ -18,7 +18,7 @@ Add a setup system on first startup of AOs [if aos.user file doesn't exist in 'F
 . Fix the bug in Filer where it sometimes tries decrypt "099" for some reason. Debug it and fix it.
 . Leaf https://google.com is not working for some reason.
 . Sometimes the ">" input doesn't work. CMD opens and closes immediately and automatically.
-When changing the prompt then typing "prompt -h", then the prompt resets for some reason. Fix it.
+. When changing the prompt then typing "prompt -h", then the prompt resets for some reason. Fix it.
 
 ........................................................................................................................
 ...........................................................Commands.....................................................
